--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -73,3 +73,7 @@ required = [
   [[prune.project]]
     name = "k8s.io/gengo"
     non-go = false
+
+[[constraint]]
+  name = "github.com/openshift/api"
+  version = "3.9.0"
