--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: jws-image-operator
           # Replace this with the built image name
-          image: REPLACE_IMAGE
+          image: docker.io/maxbeck/jws-image-operator:v0.0.1
           command:
           - jws-image-operator
           imagePullPolicy: Always
