Update Roles Permissions

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -14,6 +14,7 @@ rules:
   - events
   - configmaps
   - secrets
+  - imagestreams
   verbs:
   - '*'
 - apiGroups:
@@ -38,6 +39,30 @@ rules:
   verbs:
   - get
   - create
+- apiGroups:
+  - image.openshift.io
+  resources:
+  - imagestreams
+  verbs:
+  - "*"
+- apiGroups:
+  - build.openshift.io
+  resources:
+  - buildconfigs
+  verbs:
+  - "*"
+- apiGroups:
+  - apps.openshift.io
+  resources:
+  - deploymentconfigs
+  verbs:
+  - "*"
+- apiGroups:
+  - route.openshift.io
+  resources:
+  - routes
+  verbs:
+  - "*"
 - apiGroups:
   - apps
   resourceNames:
