Update Tomcat Custom Resource

--- a/deploy/crds/jws_v1alpha1_tomcat_cr.yaml
+++ b/deploy/crds/jws_v1alpha1_tomcat_cr.yaml
@@ -3,10 +3,12 @@ kind: Tomcat
 metadata:
   name: example-tomcat
 spec:
-  ApplicationName:
-  SourceRepositoryUrl:
-  JwsAdminUsername:
-  JwsAdminPassword:
-  GithubWebhookSecret:
-  GenericWebhookSecret:
-  ImageStreamNamespace:
+  applicationName: jws-app
+  sourceRepositoryUrl: https://github.com/jboss-openshift/openshift-quickstarts.git
+  sourceRepositoryRef: "1.2"
+  contextDir: tomcat-websocket-chat
+  jwsAdminUsername: tomcat
+  jwsAdminPassword: tomcat
+  githubWebhookSecret: tomcat
+  genericWebhookSecret: tomcat
+  imageStreamNamespace: openshift
