--- a/deploy/crds/jws_v1alpha1_tomcat_crd.yaml
+++ b/deploy/crds/jws_v1alpha1_tomcat_crd.yaml
@@ -10,20 +10,24 @@ spec:
     plural: tomcats
     singular: tomcat
   scope: Namespaced
-  subresources:
-    status: {}
   validation:
     openAPIV3Schema:
       properties:
         apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
           type: string
         kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
         spec:
           properties:
-            applicationName:              
+            applicationName:
               type: string
             artifactDir:
               type: string
@@ -43,18 +47,27 @@ spec:
               type: string
             mavenMirrorUrl:
               type: string
+            size:
+              format: int32
+              type: integer
             sourceRepositoryRef:
               type: string
             sourceRepositoryUrl:
               type: string
           required:
           - applicationName
+          - size
+          - hostnameHttp
           - sourceRepositoryUrl
+          - sourceRepositoryRef
+          - contextDir
           - jwsAdminUsername
           - jwsAdminPassword
           - githubWebhookSecret
           - genericWebhookSecret
           - imageStreamNamespace
+          - mavenMirrorUrl
+          - artifactDir
           type: object
         status:
           type: object
