--- a/deploy/crds/jws_v1alpha1_tomcat_cr.yaml
+++ b/deploy/crds/jws_v1alpha1_tomcat_cr.yaml
@@ -4,6 +4,7 @@ metadata:
   name: example-tomcat
 spec:
   applicationName: jws-app
+  size: 2
   sourceRepositoryUrl: https://github.com/jboss-openshift/openshift-quickstarts.git
   sourceRepositoryRef: "1.2"
   contextDir: tomcat-websocket-chat
