Arrange the README and what was not working.

--- a/deploy/crds/jws_v1alpha1_tomcat_cr.yaml
+++ b/deploy/crds/jws_v1alpha1_tomcat_cr.yaml
@@ -13,3 +13,7 @@ spec:
   githubWebhookSecret: tomcat
   genericWebhookSecret: tomcat
   imageStreamNamespace: openshift
+  hostnameHttp: ""
+  mavenMirrorUrl: ""
+  artifactDir: ""
+  replica: 1
