Make the imageStreamName a parameter.

--- a/deploy/crds/jws_v1alpha1_tomcat_cr.yaml
+++ b/deploy/crds/jws_v1alpha1_tomcat_cr.yaml
@@ -13,6 +13,7 @@ spec:
   githubWebhookSecret: tomcat
   genericWebhookSecret: tomcat
   imageStreamNamespace: openshift
+  imageStreamName: jboss-webserver54-openjdk8-tomcat9-ubi8-openshift:latest
   hostnameHttp: ""
   mavenMirrorUrl: ""
   artifactDir: ""
