--- a/deploy/crds/jws_v1alpha1_tomcat_crd.yaml
+++ b/deploy/crds/jws_v1alpha1_tomcat_crd.yaml
@@ -41,6 +41,8 @@ spec:
               type: string
             imageStreamNamespace:
               type: string
+            imageStreamName:
+              type: string
             jwsAdminPassword:
               type: string
             jwsAdminUsername:
@@ -66,6 +68,7 @@ spec:
           - githubWebhookSecret
           - genericWebhookSecret
           - imageStreamNamespace
+          - imageStreamName
           - mavenMirrorUrl
           - artifactDir
           type: object
