The names were not following the rules.

--- a/deploy/crds/jws_v1alpha1_tomcat_crd.yaml
+++ b/deploy/crds/jws_v1alpha1_tomcat_crd.yaml
@@ -7,8 +7,8 @@ spec:
   names:
     kind: JBossWebServer
     listKind: JBossWebServerList
-    plural: jbosswebservers
-    singular: jbosswebserver
+    plural: jwsservers
+    singular: jwsserver
   scope: Namespaced
   validation:
     openAPIV3Schema:
