Adjust some more names.

--- a/deploy/crds/jws_v1alpha1_tomcat_cr.yaml
+++ b/deploy/crds/jws_v1alpha1_tomcat_cr.yaml
@@ -1,4 +1,4 @@
-apiVersion: jws.apache.org/v1alpha1
+apiVersion: jwsservers.web.servers.org/v1alpha1
 kind: Tomcat
 metadata:
   name: example-tomcat
