--- a/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_crd.yaml
+++ b/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_crd.yaml
@@ -1,14 +1,14 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: tomcats.jws.apache.org
+  name: jwsservers.web.servers.org
 spec:
-  group: jws.apache.org
+  group: web.servers.org
   names:
-    kind: Tomcat
-    listKind: TomcatList
-    plural: tomcats
-    singular: tomcat
+    kind: JBossWebServer
+    listKind: JBossWebServerList
+    plural: jwsservers
+    singular: jwsserver
   scope: Namespaced
   validation:
     openAPIV3Schema:
