Added applicationImage to types and CRD and CR yamls

--- a/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_cr.yaml
+++ b/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_cr.yaml
@@ -4,6 +4,7 @@ metadata:
   name: example-jbosswebserver
 spec:
   # Add fields here
+  applicationImage: "registry.redhat.io/jboss-webserver-5/webserver53-openjdk8-tomcat9-openshift-rhel7:latest"
   applicationName: jws-app
   sourceRepositoryUrl: https://github.com/jboss-openshift/openshift-quickstarts.git
   sourceRepositoryRef: "1.2"
