Clean up and added second Custom Resource example

--- a/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_imagestream_cr.yaml
+++ b/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_imagestream_cr.yaml
@@ -4,10 +4,14 @@ metadata:
   name: example-jbosswebserver
 spec:
   # Add fields here
-  applicationImage: "registry.redhat.io/jboss-webserver-5/webserver52-openjdk8-tomcat9-openshift-rhel7:latest"
   applicationName: jws-app
+  sourceRepositoryUrl: https://github.com/jboss-openshift/openshift-quickstarts.git
+  sourceRepositoryRef: "1.2"
+  contextDir: tomcat-websocket-chat
   githubWebhookSecret: tomcat
   genericWebhookSecret: tomcat
+  imageStreamNamespace: openshift
+  imageStreamName: jboss-webserver53-tomcat9-openshift:latest
   mavenMirrorUrl: ""
   artifactDir: ""
   replicas: 2
