--- a/deploy/kubernetes_operator.template
+++ b/deploy/kubernetes_operator.template
@@ -30,3 +30,6 @@ spec:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
               value: "jws-image-operator"
+#            - name: SERVER_READINESS_SCRIPT
+#              value: "/bin/busybox wget http://localhost:8080/health -O /dev/null"
+
