Readded the jwsAdminUsername/jwsAdminPassword logic for 5.3 and 3.1 images health check. Moved the readiness and liveness scripts to jbosswebserver template. Removed non-essential required fields from CRD.

--- a/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_crd.yaml
+++ b/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_crd.yaml
@@ -47,6 +47,14 @@ spec:
               type: string
             imageStreamName:
               type: string
+            jwsAdminPassword:
+              type: string
+            jwsAdminUsername:
+              type: string
+            serverReadinessScript:
+              type: string
+            serverLivenessScript:
+              type: string
             mavenMirrorUrl:
               type: string
             replicas:
@@ -59,10 +67,6 @@ spec:
           required:
             - applicationName
             - replicas
-            - githubWebhookSecret
-            - genericWebhookSecret
-            - mavenMirrorUrl
-            - artifactDir
           type: object
         status:
           type: object
