--- a/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_cr.yaml
+++ b/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_cr.yaml
@@ -6,8 +6,8 @@ spec:
   # Add fields here
   applicationImage: "registry.redhat.io/jboss-webserver-5/webserver53-openjdk8-tomcat9-openshift-rhel7:latest"
   applicationName: jws-app
-  githubWebhookSecret: tomcat
-  genericWebhookSecret: tomcat
-  mavenMirrorUrl: ""
-  artifactDir: ""
   replicas: 2
+  # For pre JWS-5.4 image you need to set username/password and use the following health check.
+  jwsAdminUsername: tomcat
+  jwsAdminPassword: tomcat
+  serverReadinessScript: /bin/bash -c "/usr/bin/curl --noproxy '*' -s -u ${JWS_ADMIN_USERNAME}:${JWS_ADMIN_PASSWORD} 'http://localhost:8080/manager/jmxproxy/?get=Catalina%3Atype%3DServer&att=stateName' | /usr/bin/grep -iq 'stateName *= *STARTED'"
