--- a/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_imagestream_cr.yaml
+++ b/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_imagestream_cr.yaml
@@ -5,6 +5,8 @@ metadata:
 spec:
   # Add fields here
   applicationName: jws-app
+  replicas: 2
+  # To use imagestreams, the following fields are required
   sourceRepositoryUrl: https://github.com/jboss-openshift/openshift-quickstarts.git
   sourceRepositoryRef: "1.2"
   contextDir: tomcat-websocket-chat
@@ -14,4 +16,7 @@ spec:
   imageStreamName: jboss-webserver53-tomcat9-openshift:latest
   mavenMirrorUrl: ""
   artifactDir: ""
-  replicas: 2
+  # For pre JWS-5.4 image you need to set username/password and use the following health check.
+  jwsAdminUsername: tomcat
+  jwsAdminPassword: tomcat
+  serverReadinessScript: /bin/bash -c "/usr/bin/curl --noproxy '*' -s -u ${JWS_ADMIN_USERNAME}:${JWS_ADMIN_PASSWORD} 'http://localhost:8080/manager/jmxproxy/?get=Catalina%3Atype%3DServer&att=stateName' | /usr/bin/grep -iq 'stateName *= *STARTED'"
