--- a/deploy/openshift_operator.template
+++ b/deploy/openshift_operator.template
@@ -1,30 +1,30 @@
 apiVersion: v1
 kind: Template
 metadata:
-  name: jws-image-operator-template
+  name: jws-operator-template
   annotations:
     description: "Description JWS Operator template"
 objects:
  - apiVersion: apps/v1
    kind: Deployment
    metadata:
-     name: jws-image-operator
+     name: jws-operator
    spec:
      replicas: 1
      selector:
        matchLabels:
-         name: jws-image-operator
+         name: jws-operator
      template:
        metadata:
          labels:
-           name: jws-image-operator
+           name: jws-operator
        spec:
-         serviceAccountName: jws-image-operator
+         serviceAccountName: jws-operator
          containers:
-           - name: jws-image-operator
+           - name: jws-operator
              image: "${IMAGE}"
              command:
-             - jws-image-operator
+             - jws-operator
              imagePullPolicy: Always
              env:
                - name: WATCH_NAMESPACE
@@ -36,7 +36,7 @@ objects:
                    fieldRef:
                      fieldPath: metadata.name
                - name: OPERATOR_NAME
-                 value: "jws-image-operator"
+                 value: "jws-operator"
 parameters:
   - name: IMAGE
     displayName: Docker image URL
