--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -1,11 +1,11 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: jws-image-operator
+  name: jws-operator
 subjects:
-- kind: ServiceAccount
-  name: jws-image-operator
+  - kind: ServiceAccount
+    name: jws-operator
 roleRef:
   kind: Role
-  name: jws-image-operator
+  name: jws-operator
   apiGroup: rbac.authorization.k8s.io
