More manifest changes

--- a/manifests/jws/0.1.0/jws-operator.v0.1.0.clusterserviceversion.yaml
+++ b/manifests/jws/0.1.0/jws-operator.v0.1.0.clusterserviceversion.yaml
@@ -8,6 +8,7 @@ metadata:
     createdAt: 2020-09-17T13:51:50Z
     support: Red Hat
     repository: https://github.com/web-servers/jws-operator
+    certified: "false"
     alm-examples: |-
       [
         {
