Added deployment to csv Created a unified template for operator.yaml Changed makefile to use the new template and operator.yaml Minor refactoring

--- a/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_cr.yaml
+++ b/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_cr.yaml
@@ -1,7 +1,7 @@
 apiVersion: web.servers.org/v1alpha1
 kind: JBossWebServer
 metadata:
-  name: example-jbosswebserver
+  name: example-image-jbosswebserver
 spec:
   # Add fields here
   applicationImage: docker.io/jfclere/jws-image:5.4
