--- a/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_imagestream_cr.yaml
+++ b/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_imagestream_cr.yaml
@@ -1,7 +1,7 @@
 apiVersion: web.servers.org/v1alpha1
 kind: JBossWebServer
 metadata:
-  name: example-jbosswebserver
+  name: example-imagestream-jbosswebserver
 spec:
   # Add fields here
   applicationName: jws-app
