--- a/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_crd.yaml
+++ b/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_crd.yaml
@@ -58,7 +58,9 @@ spec:
             mavenMirrorUrl:
               type: string
             replicas:
+              description: The desired number of replicas for the application
               format: int32
+              minimum: 0
               type: integer
             sourceRepositoryRef:
               type: string
