Limit replicas to non-negative values [JWS-1873]

--- a/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_crd.yaml
+++ b/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_crd.yaml
@@ -58,8 +58,10 @@ spec:
             mavenMirrorUrl:
               type: string
             replicas:
+              description: The desired number of replicas for the application
               format: int32
               type: integer
+              minimum: 0
             sourceRepositoryRef:
               type: string
             sourceRepositoryUrl:
