Adjust pod states

--- a/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_crd.yaml
+++ b/deploy/crds/jwsservers.web.servers.org_v1alpha1_jbosswebserver_crd.yaml
@@ -92,9 +92,8 @@ spec:
                       during scale down.
                     enum:
                     - ACTIVE
-                    - SCALING_DOWN_RECOVERY_INVESTIGATION
-                    - SCALING_DOWN_RECOVERY_DIRTY
-                    - SCALING_DOWN_CLEAN
+                    - FAILED
+                    - PENDING
                     type: string
                 required:
                 - name
