Remove jboss from code and file names
Drop support for 5.3

Change version to 1.0.0

Move WebSources under WebImageStream

Move HealthCheckSpec under WebImage and WebImageStream

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -15,7 +15,7 @@ spec:
       serviceAccountName: jws-operator
       containers:
         - name: jws-operator
-          image: quay.io/jfclere/jws-operator:v0.1.0
+          image: quay.io/pprokopi/jws-operator:v1.0.0
           command:
             - jws-operator
           imagePullPolicy: Always
