Add useSessionClustering and corresponding logic.

--- a/deploy/crds/web.servers.org_webservers_crd.yaml
+++ b/deploy/crds/web.servers.org_webservers_crd.yaml
@@ -39,6 +39,9 @@ spec:
               format: int32
               minimum: 0
               type: integer
+            useSessionClustering:
+              description: Use Session Clustering
+              type: boolean
             webImage:
               description: (Deployment method 1) Application image
               properties:
