--- a/deploy/crds/web.servers.org_webservers_cr.yaml
+++ b/deploy/crds/web.servers.org_webservers_cr.yaml
@@ -7,4 +7,4 @@ spec:
   applicationName: jws-app
   replicas: 2
   webImage:
-    applicationImage: quay.io/jfclere/jws-image:5.4
+    applicationImage: quay.io/jfclere/tomcat10:latest
