--- a/manifests/jws/1.1.0/jws-operator.clusterserviceversion.yaml
+++ b/manifests/jws/1.1.0/jws-operator.clusterserviceversion.yaml
@@ -22,7 +22,7 @@ metadata:
             "applicationName": "jws-app",
             "replicas": 2,
             "webImage": {
-              "applicationImage": "quay.io/jfclere/jws-image:5.4"
+              "applicationImage": "quay.io/jfclere/tomcat10:latest"
             }
           }
         },
