--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -15,7 +15,7 @@ spec:
       serviceAccountName: jws-operator
       containers:
         - name: jws-operator
-          image: quay.io/web-servers/jws-operator:v1.2.0-webapp
+          image: quay.io/web-servers/jws-operator:v1.3.0-refactor
           command:
             - jws-operator
           imagePullPolicy: Always
