Add some permission (for kubernetes).

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -93,3 +93,12 @@ rules:
       - create
       - get
       - watch
+  - apiGroups:
+      - storage.k8s.io
+    resources:
+      - storageclasses
+    verbs:
+      - list
+      - create
+      - get
+      - watch
