--- a/config/crd/bases/web.servers.org_webservers.yaml
+++ b/config/crd/bases/web.servers.org_webservers.yaml
@@ -77,12 +77,8 @@ spec:
                       contextDir:
                         description: Subdirectory in the source repository
                         type: string
-                      deployPath:
-                        description: The path on which the application war will be
-                          mounted (default:/usr/local/tomcat/webapps/)
-                        type: string
                       name:
-                        description: 'Name of the web application (default: ROOT)'
+                        description: 'Name of the web application (default: ROOT.war)'
                         type: string
                       sourceRepositoryRef:
                         description: Branch in the source repository
