Add Service Monitor and resources for autoscaling.

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -129,7 +129,10 @@ rules:
   - servicemonitors
   verbs:
   - create
+  - delete
   - get
+  - list
+  - watch
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
