--- a/config/samples/web.servers.org_webservers_cr_build_webapp_minimal.yaml
+++ b/config/samples/web.servers.org_webservers_cr_build_webapp_minimal.yaml
@@ -8,8 +8,11 @@ spec:
   webImage:
     applicationImage: quay.io/jfclere/tomcat10:latest
     webApp:
+      webAppWarImage: quay.io/jfclere/test
+      webAppWarImagePushSecret: secretfortests
       sourceRepositoryURL: https://github.com/jfclere/demo-webapp
       # sourceRepositoryRef is not required by default but it is needed to get the correct source code for the webapp
       sourceRepositoryRef: "jakartaEE"
+      webAppWarImage: quay.io/jfclere/tomcat10:latest
       builder:
-        image: maven:3.8.1-openjdk-8
+        image: quay.io/jfclere/tomcat10-buildah
